--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <div style="width:800px;height:400px;border:1px solid blue;">
-<div style="width:150px;height:150px;backround-image:url('images/gif_doge.gif');backround size:cover; backround-repeat:no-repeat; position:relative;top:250px;">
+<div style="width:150px;height:150px;backround-image:url('images/gif_doge.gif');backround size:cover; backround-repeat:no-repeat; position:relative;top:250px;"></div>
+<div style="width:50px;height:50px;backround-image:url('images/spikeyDoom.png');position:relative;top:350px;left:750px;backround-size:contain;backround-repeat:no-repeat;">
+
 
 </div>
 
