--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
 <meta charset="utf-8" />  
   <title> Doge ball </title>
 
-  
+  <style>
+   #divball{
+     animation:gravitationalpull 3s infinite linear;
+    }
+    
+    @keyframes gravitationalpull {
+      0%{  left: 750px;   }    
+      100%{  left:-50px; }
+      
+    }
+  </style>
 </head>
 <body>
 <div style="width:800px;height:400px;border:1px solid blue;">
 <div id="divdoggy" style="width:150px;height:150px;background-image:url('images/gif_doge.gif');background-size:contain; background-repeat:no-repeat; position:relative;top:250px;"></div>
-<div style="width:50px;height:50px;background-image:url('images/SpikeyDoom.png');position:absolute;top:350px;left:750px;background-size:contain;background-repeat:no-repeat;">
+<div id="divball" style="width:50px;height:50px;background-image:url('images/SpikeyDoom.png');position:absolute;top:350px;left:750px;background-size:contain;background-repeat:no-repeat;">
 
 
 </div>
