--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             }
         }
     </style>
-    <script>
+    <script type="text/javascript">
+        var scoreCount = 0;
     function fnjump(e) {
 
       if (e.keyCode === 32 || e.keyCode === 13){
@@ -68,14 +69,21 @@
                 document.getElementById('divball').style.display = 'none';
                 document.getElementById('divgameover').style.display = 'block';
             }
+            else if (ballLeft > 0 && ballLeft < 80 && dogTop < 250) {
+                scoreCount = scoreCount + 20;
+                document.getElementById('spscore').innerHTML = scoreCount;
+            }
 
-        }, 60);
+        },   300);
 
 
    </script>
 </head>
 <body onkeypress="fnjump(event)">
     <div style="width:800px;height:400px;border:1px solid blue;">
+        <div style="float: right; color: deepskyblue; font-weight: bold;">
+        <span> Dogeball Points: <span id="spscore"> </span></span>
+        </div>
         <div id="divdoggy" style="width: 100px; height: 100px; background-image: url('images/dog.png'); background-size: contain; background-repeat: no-repeat; position: relative; top: 300px; "></div>
         <div id="divball" style="width:50px;height:50px;background-image:url('images/SpikeyDoom.png');position:absolute;top:350px;left:750px;background-size:contain;background-repeat:no-repeat;"></div>
 
@@ -84,6 +92,14 @@
 </div>
         
 
+    </div>
+    <div>
+        <h3>Instructions:</h3>
+        <ul>
+            <li>Press space or enter to dodge the ball</li>
+            <li>Refresh the page to reset</li>
+            <li>doge :)</li>
+        </ul>
     </div>
 </body>
 
